# server-data-plane

./: README.md
kv_filestore_odp/: .gitignore  LICENSE  README.md  configure.ac
kv_filestore_odp/include/: config.hh  object.hh  objpool.hh  objpool_impl.hh  util.hh  worker.hh
kv_filestore_odp/src/: Makefile.am  objpool.cpp  qdofs.cpp  qdofs_tester.cpp  util.cpp  worker.cpp  worker_transaction.cpp
kv_filestore_threaded/: Makefile.am  README.md  bootstrap  configure.ac
kv_filestore_threaded/include/: acceptor.hh  config.hh  exception.hh  file_io.hh  pipe.hh  protocol.hh  util.hh  worker.hh
kv_filestore_threaded/src/: Makefile.am  acceptor.cpp  config.cpp  file_io.cpp  pipe.cpp  qdofs.cpp  qdofs_tester.cpp  replicator.cpp  util.cpp  worker.cpp  worker_transaction.cpp
memcached-odp/: LICENSE  README.SDP  assoc.c  bootstrap  items.c  memcached.c  memcached.h  sizes.c  slabs.c  thread.c
mutilate-kv_filestore/: AgentStats.h  Connection.cc  Connection.h  ConnectionOptions.h  ConnectionStats.h  Generator.cc  LICENSE  Operation.h  Protocol.cc  Protocol.h  README.md  binary_protocol.h  cmdline.ggo  cscope.out  mutilate.cc  util.h
mutilate-memcached/: AdaptiveSampler.h  Connection.cc  Generator.cc  Generator.h  HistogramSampler.h  LogHistogramSampler.h  README.md  cmdline.ggo  mutilate.cc
odp-dpdk-ofp-server/: LICENSE  README.SDP  configure.ac
odp-dpdk-ofp-server/include/: odp_api.h
odp-dpdk-ofp-server/include/odp/api/spec/: buffer.h  chained_buffer.h  cpumask.h  epoll.h  file_io.h  packet.h  pool.h  pthreadlock.h  queue.h  thread.h
odp-dpdk-ofp-server/platform/: Makefile.inc
odp-dpdk-ofp-server/platform/linux-dpdk/: Makefile.am  odp_chained_buffer.c  odp_fileio.c  odp_init.c  odp_linux_helper.c  odp_packet.c  odp_pool.c  odp_schedule.c  odp_socket_io.c  odp_stream_packetizer.c  odp_thread.c
odp-dpdk-ofp-server/platform/linux-dpdk/include/: odp_buffer_inlines.h  odp_buffer_internal.h  odp_chained_buffer_internal.h  odp_config_internal.h  odp_linux_helper_internal.h  odp_packet_internal.h  odp_schedule_if.h  odp_socket_io_internal.h
odp-dpdk-ofp-server/platform/linux-dpdk/include/odp/api/: chained_buffer.h  epoll.h  file_io.h  pthreadlock.h  socket_io.h  stream_packetizer.h
odp-dpdk-ofp-server/platform/linux-dpdk/include/odp/api/plat/: event_types.h  socket_io_types.h  stream_packetizer_types.h
odp-dpdk-ofp-server/platform/linux-dpdk/ofp/: README.md
odp-dpdk-ofp-server/platform/linux-dpdk/ofp/include/: ofpi.h  ofpi_init.h  ofpi_portconf.h  ofpi_sockbuf.h
odp-dpdk-ofp-server/platform/linux-dpdk/ofp/include/api/: ofp.h  ofp_cli.h  ofp_config.h  ofp_socket.h
odp-dpdk-ofp-server/platform/linux-dpdk/ofp/src/: ofp_ifnet.c  ofp_init.c  ofp_pkt_send_burst.c  ofp_portconf.c  ofp_tcp_input.c  ofp_tcp_subr.c  ofp_uma.c
odp-dpdk-ofp-server/platform/linux-dpdk/ofp/src/cli/: ofp_cli.c
odp-dpdk-ofp-server/platform/linux-generic/: Makefile.am  odp_event.c  odp_fileio.c  odp_fileio_aio.c  odp_init.c  odp_packet.c  odp_packet_io.c  odp_pool.c  odp_pthreadlock.c  odp_queue.c  odp_schedule.c  odp_schedule_ordered.c  odp_schedule_sp.c  odp_socket_io.c  odp_stream_packetizer.c
odp-dpdk-ofp-server/platform/linux-generic/include/: odp_atomic_internal.h  odp_buffer_internal.h  odp_config_internal.h  odp_fileio_internal.h  odp_fileio_internal_aio.h  odp_internal.h  odp_packet_io_queue.h  odp_pool_internal.h  odp_queue_internal.h  odp_schedule_if.h  odp_schedule_internal.h  odp_socket_io_internal.h  odp_stream_packetizer_internal.h
odp-dpdk-ofp-server/platform/linux-generic/include/odp/api/: chained_buffer.h  epoll.h  file_io.h  pthreadlock.h
odp-dpdk-ofp-server/platform/linux-generic/include/odp/api/plat/: event_types.h  socket_io_types.h  stream_packetizer_types.h
odp-linux-generic-server/: README.SDP  configure.ac
odp-linux-generic-server/helper/: lineartable.c  linux.c
odp-linux-generic-server/include/: odp_api.h
odp-linux-generic-server/include/odp/api/spec/: buffer.h  chained_buffer.h  epoll.h  event.h  file_io.h  packet.h  pool.h  pthreadlock.h  queue.h  socket_io.h  stream_packetizer.h  thread.h
odp-linux-generic-server/platform/: Makefile.inc
odp-linux-generic-server/platform/linux-generic/: .gitignore  Makefile.am  odp_chained_buffer.c  odp_cpumask.c  odp_epoll.c  odp_fileio.c  odp_fileio_aio.c  odp_packet.c  odp_packet_io.c  odp_pool.c  odp_queue.c  odp_schedule.c  odp_schedule_sp.c
odp-linux-generic-server/platform/linux-generic/include/: odp_atomic_internal.h  odp_buffer_inlines.h  odp_buffer_internal.h  odp_config_internal.h  odp_epoll_internal.h  odp_fileio_internal.h  odp_fileio_internal_aio.h  odp_internal.h  odp_packet_io_internal.h  odp_packet_io_queue.h  odp_pool_internal.h  odp_queue_internal.h  odp_schedule_if.h  odp_socket_io_queue.h
odp-linux-generic-server/platform/linux-generic/include/odp/api/: file_io.h  socket_io.h  stream_packetizer.h
odp-linux-generic-server/platform/linux-generic/include/odp/api/plat/: event_types.h  stream_packetizer_types.h
